--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,7 +10,12 @@
 
 <body>
     <div class="container" style="padding-top: 20px;">
-        <a href="/login" class="btn btn-primary" style="float:right;">로그인</a>
+        <% if(logged) { %>
+            <a href="/logout" class="btn btn-primary" style="float:right;">로그아웃</a>
+            <h3 style="float:right"><%= user %>님!</h3>
+        <% } else { %>
+            <a href="/login" class="btn btn-primary" style="float:right;">로그인</a>
+        <% } %>
         <h1 class="title" style="text-align: center; padding-top:40px;">게시판</h1>
         <table class="table table-hover">
             <thead>
@@ -29,12 +34,20 @@
                             <td>
                                 <a href='/detail/<%= item.id %>'><%= item.title %></a>
                             </td>
+                            <td>
+                                <a href='/detail/<%= item.id %>'><%= item.user %></a>
+                            </td>
+                            <td>
+                                <a href='/detail/<%= item.id %>'><%= item.created %></a>
+                            </td>
                         </tr>
                         <% })%>
                 </tbody>
             </thead>
         </table>
-        <a href="/write" class="btn btn-secondary">글쓰기</a>
+        <% if(logged) { %>
+            <a href="/write" class="btn btn-secondary">글쓰기</a>
+            <% } %>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="../javascripts/bootstrap.js"></script>
