Add detail page

--- a/views/write.ejs
+++ b/views/write.ejs
@@ -27,7 +27,7 @@
                                 <button type="submit" class="btn btn-success">
                                     작성
                                 </button>
-                                <button type="submit" class="btn btn-danger">
+                                <button type="submit" class="btn btn-danger" onclick="location.replace('/')">
                                     취소
                                 </button>
                             </div>
