--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,11 +17,11 @@
                 <form role="form" method="POST">
                     <div class="form-group">
                         <label for="inputName">성명</label>
-                        <input type="text" id="user" name="user" class="form-control" placeholder="이름을 입력해 주세요" required>
+                        <input type="text" id="user_name" name="user_name" class="form-control" placeholder="이름을 입력해 주세요" required>
                     </div>
                     <div class="form-group">
                         <label for="InputEmail">아이디</label>
-                        <input type="text" id="id" name="id" class="form-control" placeholder="아이디를 입력해주세요" required>
+                        <input type="text" id="user_id" name="user_id" class="form-control" placeholder="아이디를 입력해주세요" required>
                     </div>
                     <div class="form-group">
                         <label for="inputPassword">비밀번호</label>
