--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="margin">
-            <form class="form-signin" method="POST">
+            <form class="form-signin">
                 <h3 class="form-signin-heading">로그인 정보를 입력하세요</h3>
                 <input type="text" class="form-control" id="user_id" name="user_id" placeholder="ID" required/>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Password" required/>
